# coop

./: .dir-locals.el  .gitignore  LICENSE.md  Makefile  Manual.md  README.md  coop  coop.odocl  coop.opam  dune-project  foo.coop  pervasives.coop  pervasives.trm  terminus.odocl
doc/: manual.md
etc/: coop-mode.el
examples/: file.coop  file_operations.coop  io_monitor.coop  memory.coop  state.coop  state.trm  tick.coop
src/: TT.ml  TT.mli  config.ml  config.mli  coop.ml  desugar.ml  desugar.mli  desugared.mli  dsyntax.ml  dsyntax.mli  dune  eval.ml  eval.mli  external.ml  external.mli  input.mli  level.ml  level.mli  lexer.ml  location.ml  location.mli  name.ml  name.mli  parser.mly  print.ml  print.mli  rsyntax.ml  rsyntax.mli  runtime.ml  runtime.mli  sugared.mli  syntax.ml  syntax.mli  terminus.ml  toplevel.ml  toplevel.mli  typecheck.ml  typecheck.mli  ulexbuf.ml  ulexbuf.mli  (+2 more)
tests/: abstract_type.coop  abstract_type.coop.ref  any_type.coop  any_type.coop.ref  catch_signal.coop  catch_signal.coop.ref  comodel_nested.coop  comodel_nested.coop.ref  comodelplus.coop  comodelplus.coop.ref  comodelrename.coop  comodelrename.coop.ref  comodeltimes.coop  comodeltimes.coop.ref  datatypes.coop  datatypes.coop.ref  declare.coop  declare.coop.ref  empty_type.coop  empty_type.coop.ref  exception_propagate.coop  exception_propagate.coop.ref  kernel_exec.coop  kernel_exec.coop.ref  optional_val_case.coop  optional_val_case.coop.ref  potentially_unhandled.coop  potentially_unhandled.coop.ref  recursion.coop  recursion.coop.ref  signal_catch.coop  signal_catch.coop.ref  test.sh  (+6 more)
